package org.example.pattern.adapter;

/**
 * @author: zyh
 * @date: 2022/12/19
 */
public class Adaptee {

    public void adapteeRequest(){
        System.out.println("被适配者的方法");
    }

}
