package org.example.pattern.adapter;

/**
 * @author: zyh
 * @date: 2022/12/19
 */
public interface Target{

    void request();

}
